--- a/index.html
+++ b/index.html
@@ -545,19 +545,19 @@
                     <div class="footer-widget">
                         <h5 class="mb-3 text-white text-uppercase">Links</h5>
                         <ul class="list-unstyled d-flex flex-row flex-md-column footer-nav">
-                            <li class="me-3 me-md-0 mb-mb-2">
+                            <li class="me-3 me-md-0 mb-md-2">
                                 <a href="#" class="nav-link">Shop</a>
                             </li>
-                            <li class="me-3 me-md-0 mb-mb-2">
+                            <li class="me-3 me-md-0 mb-md-2">
                                 <a href="#" class="nav-link">News</a>
                             </li>
-                            <li class="me-3 me-md-0 mb-mb-2">
+                            <li class="me-3 me-md-0 mb-md-2">
                                 <a href="#" class="nav-link">About</a>
                             </li>
-                            <li class="me-3 me-md-0 mb-mb-2">
+                            <li class="me-3 me-md-0 mb-md-2">
                                 <a href="#" class="nav-link">Policy</a>
                             </li>
-                            <li class="me-3 me-md-0 mb-mb-2">
+                            <li class="me-3 me-md-0 mb-md-2">
                                 <a href="#" class="nav-link">Help</a>
                             </li>
                         </ul>
